changed variable names to make the code easier to understand

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -1549,8 +1549,8 @@
     "\n",
     "# Use sample coordinates and set \"returns\" to 1 to print out the result to determine the location of the zipcode value in the list\n",
     "# The list returned by search.by_coordinates() does not allow strings to be used to select values due to SimpleZipcode()\n",
-    "result = search.by_coordinates(39.122229, -77.133578, radius=5, returns=1)\n",
-    "print(result)"
+    "coordinates_sample = search.by_coordinates(39.122229, -77.133578, radius=5, returns=1)\n",
+    "print(coordinates_sample)"
    ]
   },
   {
@@ -1560,7 +1560,7 @@
    "outputs": [],
    "source": [
     "# Create an empty list to append the coordinate values to\n",
-    "list_ = []\n",
+    "coordinates_list = []\n",
     "\n",
     "# Zip the columns \"start_station_latitude\" and \"start_station_longitude\" to return an iterator of tuples\n",
     "# Loop through each value in the columns using lat, lng\n",
@@ -1570,7 +1570,7 @@
     "    # Set returns to 0 to return all of the coordinates in the lat,lng columns\n",
     "    # Set the radius to 100 to make sure to cover all of the zipcodes included in our database\n",
     "    coordinates = search.by_coordinates(lat=lat, lng=lng, radius=100, returns=0)\n",
-    "    list_.append(result)"
+    "    coordinates_list.append(coordinates)"
    ]
   },
   {
@@ -1580,7 +1580,12 @@
    "outputs": [],
    "source": [
     "# Use a list comprehension to unpack the rest of the values in \"result\" so you can choose the zipcodes to add to the dataframe\n",
-    "zipcode = [list_[i][0].items()[0][1] for i, x in enumerate(list_)]"
+    "zipcode = [coordinates_list[i][0].items()[0][1] for i, x in enumerate(coordinates_list)]\n",
+    "\n",
+    "# Assign the zipcode values to the \"zip_code\" column in the dataframe\n",
+    "df['zip_code'] = zipcode\n",
+    "# Preview the first 5 rows of the updated dataframe to confirm that the changes were made successfully\n",
+    "df.head()"
    ]
   },
   {
@@ -1588,12 +1593,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Assign the zipcode values to the \"zip_code\" column in the dataframe\n",
-    "df['zip_code'] = zipcode\n",
-    "# Preview the first 5 rows of the updated dataframe to confirm that the changes were made successfully\n",
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
