Code for calculating the number of stations in each zip code

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -1570,6 +1570,7 @@
     "    # Set returns to 0 to return all of the coordinates in the lat,lng columns\n",
     "    # Set the radius to 100 to make sure to cover all of the zipcodes included in our database\n",
     "    coordinates = search.by_coordinates(lat=lat, lng=lng, radius=100, returns=0)\n",
+    "    # Append the lat,lng coordinates to coordinates_list\n",
     "    coordinates_list.append(coordinates)"
    ]
   },
@@ -1593,7 +1594,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate number of stations in each zip code\n",
+    "\n",
+    "# Create a new dataframe with the columns zip_code, start_station_id, and end_station_id. This will be used to calculate the\n",
+    "# number of stations in each zip code\n",
+    "station_count_df = df[['zip_code', 'start_station_id', 'end_station_id']]\n",
+    "# Display the first few rows to confirm that the dataframe was created properly\n",
+    "station_count_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set a variable, unique_count, to a groupby() object as a base for calculating the number of stations in each zip code\n",
+    "# Pass the zip_code column into groupby to count the number of stations grouped by each unique zip code\n",
+    "# Use .size() to return the total number of elements\n",
+    "# Use .reset_index() to recalculate the index for each row based upon their position within the new DataFrame. This will\n",
+    " # enable simpler referencing of rows in the future\n",
+    "# Pass the name argument in .reset_index() to assign a name to the column that will hold the values for the number of stations\n",
+    " # in each zip code\n",
+    "unique_count = station_count_df.groupby('zip_code').size().reset_index(name='num_stations_by_zip')\n",
+    "# Display the dataframe to make sure it was created properly\n",
+    "unique_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the length of the station_count_df dataframe and the sum of the values in the num_stations_by_zip to make sure they\n",
+    "# match\n",
+    "print(len(station_count_df))\n",
+    "print(unique_count['num_stations_by_zip'].sum())"
+   ]
   },
   {
    "cell_type": "code",
