Code for calculating the number of stations in each zip code added

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -17,7 +17,8 @@
    "outputs": [],
    "source": [
     "import zipfile, urllib.request, shutil\n",
-    "import pandas as pd,numpy as np\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "import glob\n",
     "import citipy\n",
     "import csv\n",
