Code for calculating the number of stations in each zip code added

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -1584,9 +1584,9 @@
     "# Use a list comprehension to unpack the rest of the values in \"result\" so you can choose the zipcodes to add to the dataframe\n",
     "zipcode = [coordinates_list[i][0].items()[0][1] for i, x in enumerate(coordinates_list)]\n",
     "\n",
-    "# Assign the zipcode values to the \"zip_code\" column in the dataframe\n",
+    "# Assign the zipcode values to the zip_code column in the dataframe\n",
     "df['zip_code'] = zipcode\n",
-    "# Preview the first 5 rows of the updated dataframe to confirm that the changes were made successfully\n",
+    "# Preview the first 5 rows of the updated dataframe to confirm that the changes were made properly\n",
     "df.head()"
    ]
   },
